schema/testdata/validation_permission_input_on_rhs/schema.keel
model Post {
  fields {
    title Text
  }

  operations {
    create createPost() with(title, coolTitle: Text) {
      @permission(expression: "123" == coolTitle)
    }
  }
}