schema/testdata/errors/attribute_expression_invalid_root_model.keel
model Post {
    fields {
        title Text
    }

    @permission(
        //expect-error:21:24:AttributeExpressionError:unknown identifier 'pos'
        expression: pos.title != "",
        actions: [get]
    )
}
